--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 <body>
   <button>button</button>
-  <div id="box"></div>
+  <div class="wrap">
+    <div id="box"></div>
+  </div>
 </body>
 
 </html>
