--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
-  <script defer src="anime.js"></script>
+  <script src="anime_02.js"></script>
 </head>
 
 <body>
@@ -14,6 +14,27 @@
   <div class="wrap">
     <div id="box"></div>
   </div>
+
+  <script>
+    const btn = document.querySelector('button');
+    const box = document.querySelector('#box');
+
+    btn.addEventListener('click', () => {
+      new Anime(window, {
+        prop: 'scroll',
+        value: 1000,
+        duration: 1000,
+        callback: () => {
+          console.log('end');
+          new Anime(box, {
+            prop: 'top',
+            value: '50%',
+            duration: 1000,
+          });
+        },
+      });
+    });
+  </script>
 </body>
 
 </html>
